# StarChainMarket

./: CMakeLists.txt  Readme.md  main.cc  market_example3.txt
include/: algorithm.h  edge.h  experiment.h  linear_function.h  linear_function_define_on_segment.h  node.h  piecewise_linear_function.h  segment.h  star_chain_market.h  utils.h
src/: edge.cc  linear_function.cc  linear_function_define_on_segment.cc  node.cc  piecewise_linear_function.cc  star_chain_market.cc
ut/: helpers.h  linear_function_define_on_segment.cc  linear_function_test.cc  piecewise_linear_function_test.cc  star_chain_market_test.cc  utils_test.cc
